--- a/ACTIVITY1.ipynb
+++ b/ACTIVITY1.ipynb
@@ -3472,8 +3472,8 @@
    "metadata": {},
    "source": [
     "<br>\n",
-    "<h4>The island that has the most population of Palmer Penguins is <strong>Biscoe</strong></h4>\n",
-    "<p><i>INSIGHT:</i> Shown above, Biscoe has the highest entry records that tops the other islands, being 168 population.</p>\n",
+    "<h4>The number of Penguins that have below average body mass is <strong>69 population</strong></h4>\n",
+    "<p><i>INSIGHT:</i> Shown above is the data that shows the number of population that has below average body mass</p>\n",
     "<hr>\n",
     "<br>"
    ]
