made the questions and insights 13

--- a/ACTIVITY1.ipynb
+++ b/ACTIVITY1.ipynb
@@ -2435,7 +2435,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "25a5c771-87dd-4c28-8051-b1f26f1eb8d7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2952,18 +2954,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "1677de23-87ac-4f5a-a4ac-4fa63154f817",
+   "execution_count": 101,
+   "id": "f20c10b1-ed02-4654-9894-88ae70b06846",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing f_oneway from scipy.stats (scince python . stats)\n",
     "from scipy.stats import f_oneway"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 102,
    "id": "4e972184-54c9-4341-b11b-530cb4a816a6",
    "metadata": {},
    "outputs": [
@@ -2984,7 +2985,7 @@
        "Name: body_mass_g, Length: 165, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2996,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 103,
    "id": "f01fd69f-af55-4aa8-a533-89b1b1d8e126",
    "metadata": {},
    "outputs": [
@@ -3006,7 +3007,7 @@
        "np.float64(3.0226600487050246e-15)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3879,15 +3880,17 @@
    "source": [
     "<br>\n",
     "<br>\n",
-    "<h2>QUESTION 8: WHAT ISLAND HOST THE HIGHEST AVERAGE BODY MASS OF A PALMER PENGUIN PER SPECIES? WHAT VALUE IS THE HIGHEST AVERAGE BODY MASS?</h2>\n",
+    "<h2>QUESTION 8: WHAT ISLAND HOST THE HIGHEST AVERAGE BODY MASS OF A PALMER PENGUIN PER SPECIES?</h2>\n",
     "<hr>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 65,
    "id": "24cb5607-7bc6-4e88-b23e-d5a8b83d861a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3905,7 +3908,7 @@
        "Name: mass_kg, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3918,7 +3921,9 @@
   {
    "cell_type": "markdown",
    "id": "c147eeac-5742-447d-875d-212b3243c8c4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "<br>\n",
     "<h4>The island that host the Adelie species with the highest average body mass is : <strong>Biscoe Island</strong></h4>\n",
@@ -3931,28 +3936,526 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0db75c01-94ca-4c1d-b403-3022287f28f3",
+   "id": "ee177b65-45b1-465b-8e28-1d4113659c9d",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<h2>QUESTION 9: IS THE BILL SIZE DIMENSION (length & depth) OF A PENGUIN RELATED TO ITS SEX?</h2>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "b0c003cd-2f2d-470d-bd90-97e61b8e9d7d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(9.307501289283404e-10)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TESTING FOR BILL LENGTH\n",
+    "bill_length_m = data[data['sex'] == 'male']['bill_length_mm']\n",
+    "bill_length_f = data[data['sex'] == 'female']['bill_length_mm']\n",
+    "\n",
+    "stats, p_value = f_oneway(bill_length_m, bill_length_f)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "2c25b68a-e83c-4503-876c-42da8d54cc39",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.2906481751545917e-11)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TESTING FOR BILL DEPTH\n",
+    "bill_depth_m = data[data['sex'] == 'male']['bill_depth_mm']\n",
+    "bill_depth_f = data[data['sex'] == 'female']['bill_depth_mm']\n",
+    "\n",
+    "stats, p_value = f_oneway(bill_depth_m, bill_depth_f)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fdcd668-6e02-47d1-b46a-3630ca797854",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<h4>The size dimension of the bill of a penguin, be it any species has shown to have <strong>correlation with its sex. </strong></h4>\n",
+    "<p><i>INSIGHT:</i> Shown above, the outcome of the analysis shows to be positive.</p>\n",
+    "<hr>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e409095c-a5d1-4352-afa5-aefff1aee21b",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<h2>QUESTION 10: WHAT SEX OF A PALMER PENGUINS HAD THE MOST POPULATION IN EACH YEAR?</h2>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "c8fe56e5-228b-493a-a201-52d78c9ae536",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year  sex   \n",
+       "2007  female    51\n",
+       "      male      59\n",
+       "2008  female    56\n",
+       "      male      58\n",
+       "2009  female    58\n",
+       "      male      62\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_populated_year = data.groupby(['year', 'sex']).size()\n",
+    "most_populated_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12d4f2eb-ddc7-4f72-89f0-989c5792b759",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<h4>In 2007, the most dominated sex of Palmer Penguin to be born is a : <strong>male penguins</strong></h4>\n",
+    "<h4>While, in 2008, it is still dominated with : <strong>male penguins</strong></h4>\n",
+    "<h4>Lastly,in 2009, it is still dominated with : <strong>male penguins</strong></h4>\n",
+    "<p><i>INSIGHT:</i> For the past 3 years, it is frequently recorded that it is dominated with males.</p>\n",
+    "<hr>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b720865-71f1-4c8e-88a1-86f9ffaf7ca3",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<h2>QUESTION 11: IS THE DEPTH OF THE BILL OF A PALMER PENGUIN RELATED TO ITS LENGTH?</h2>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "f63a888b-0ad4-45c6-aff8-dcce0e79db3e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.23505287035553285)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis = data['bill_depth_mm'].corr(data['bill_length_mm'])\n",
+    "analysis\n",
+    "\n",
+    "# x >= 0.5 = with correlation\n",
+    "# x < 0.5 = no correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0924df26-09b4-4173-a434-36d32d8f8c6e",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<h4>The bill depth of a Palmer Penguin is shown to <strong>not have or weak relationship </strong>to the length of its bill</h4>\n",
+    "<p><i>INSIGHT:</i> Some penguins with deeper bills may have shorter bills, but the pattern is not strong or consistent across the population. </p>\n",
+    "<hr>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7b1e566-d1dc-4979-b24d-ec37d9d805d6",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<h2>QUESTION 12: IS THERE A CORRELATION BETWEEN THE LENGTH OF THE FLIPPER AND ITS BODY MASS OF A PALMER PENGUIN?</h2>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "5a2d0b86-b6c0-4971-a244-65c9c47502ea",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.8712017673060114)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis = data['flipper_length_mm'].corr(data['body_mass_g'])\n",
+    "analysis\n",
+    "\n",
+    "# x >= 0.5 = with correlation\n",
+    "# x < 0.5 = no correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b944fe-00a2-4750-8a34-82febaf31b14",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<h4>The flipper length of a palmer penguin is shown to <strong>have a correlation </strong>to its body mass.</h4>\n",
+    "<p><i>INSIGHT:</i> The data proves that the bigger and heavier a Palmer Penguin becomes, the longer its flipper grows. </p>\n",
+    "<hr>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c45c386-e859-4a2c-bc55-1503f291e610",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<h2>QUESTION 13: WHAT SPECIES OF PALMER PENGUINS HAD THE MOST PENGUIN BIRTHED WITH ABOVE AVERAGE FLIPPER LENGTH AND ABOVE AVERAGE BODY MASS IN EACH YEAR?</h2>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "cf08aca5-a415-4b7f-af43-da173426c577",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "      <th>mass_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>43.92193</td>\n",
+       "      <td>17.15117</td>\n",
+       "      <td>200.915205</td>\n",
+       "      <td>4201.754386</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>41.10000</td>\n",
+       "      <td>18.10000</td>\n",
+       "      <td>205.000000</td>\n",
+       "      <td>4300.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>40.80000</td>\n",
+       "      <td>18.90000</td>\n",
+       "      <td>208.000000</td>\n",
+       "      <td>4300.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>41.00000</td>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>203.000000</td>\n",
+       "      <td>4725.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>46.10000</td>\n",
+       "      <td>13.20000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>4500.000000</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>54.20000</td>\n",
+       "      <td>20.80000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>4300.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>52.00000</td>\n",
+       "      <td>20.70000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>4800.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>53.50000</td>\n",
+       "      <td>19.90000</td>\n",
+       "      <td>205.000000</td>\n",
+       "      <td>4500.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>50.80000</td>\n",
+       "      <td>18.50000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>4450.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>49.00000</td>\n",
+       "      <td>19.60000</td>\n",
+       "      <td>212.000000</td>\n",
+       "      <td>4300.000000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>128 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "3       Adelie  Torgersen        43.92193       17.15117         200.915205   \n",
+       "91      Adelie      Dream        41.10000       18.10000         205.000000   \n",
+       "95      Adelie      Dream        40.80000       18.90000         208.000000   \n",
+       "101     Adelie     Biscoe        41.00000       20.00000         203.000000   \n",
+       "152     Gentoo     Biscoe        46.10000       13.20000         211.000000   \n",
+       "..         ...        ...             ...            ...                ...   \n",
+       "307  Chinstrap      Dream        54.20000       20.80000         201.000000   \n",
+       "313  Chinstrap      Dream        52.00000       20.70000         210.000000   \n",
+       "315  Chinstrap      Dream        53.50000       19.90000         205.000000   \n",
+       "321  Chinstrap      Dream        50.80000       18.50000         201.000000   \n",
+       "323  Chinstrap      Dream        49.00000       19.60000         212.000000   \n",
+       "\n",
+       "     body_mass_g     sex  year  mass_kg  \n",
+       "3    4201.754386    male  2007      4.2  \n",
+       "91   4300.000000    male  2008      4.3  \n",
+       "95   4300.000000    male  2008      4.3  \n",
+       "101  4725.000000    male  2009      4.7  \n",
+       "152  4500.000000  female  2007      4.5  \n",
+       "..           ...     ...   ...      ...  \n",
+       "307  4300.000000    male  2008      4.3  \n",
+       "313  4800.000000    male  2008      4.8  \n",
+       "315  4500.000000    male  2008      4.5  \n",
+       "321  4450.000000    male  2009      4.4  \n",
+       "323  4300.000000    male  2009      4.3  \n",
+       "\n",
+       "[128 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_flipper = data['flipper_length_mm'].mean()\n",
+    "average_mass = data['body_mass_g'].mean()\n",
+    "\n",
+    "\n",
+    "penguin_with_average = data[(data['flipper_length_mm'] >= average_flipper) & (data['body_mass_g'] >= average_mass)]\n",
+    "penguin_with_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "7270491b-26be-445f-868c-8232e54fd593",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year  species  \n",
+       "2007  Adelie        1\n",
+       "      Chinstrap     0\n",
+       "      Gentoo       31\n",
+       "2008  Adelie        2\n",
+       "      Chinstrap     4\n",
+       "      Gentoo       43\n",
+       "2009  Adelie        1\n",
+       "      Chinstrap     2\n",
+       "      Gentoo       44\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis = penguin_with_average.groupby(['year', 'species']).size()\n",
+    "analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a19d8122-ecc4-4848-b458-7fa6d23563e5",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<h4>In the year 2007, It is shown that many penguins with above average flipper length and body mass belongs to the : <strong>Gentoo Species.</strong></h4>\n",
+    "<h4>While, in 2008, it is still dominated with : <strong>Gentoo species.</strong></h4>\n",
+    "<h4>Lastly, in 2009, <strong>Gentoo Species</strong> still holds the record with the highest population of penguins with above average flipper length and body mass.</h4>\n",
+    "<p><i>INSIGHT:</i> The data shows that the gap between Gentoo species and the other two species holds a far difference when it comes to the palmer penguin species with longest flipper and heaviest body mass. </p>\n",
+    "<hr>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72cef0f2-8e18-442b-b159-f2fae96f4c59",
    "metadata": {},
    "source": [
     "   <h3 style=\"text-align: right; margin-right: 80px;\">Analyst : Jay Cee I. Macaraig</h3>\n",
     "   <h3 style=\"text-align: right; margin-right: 80px;\">BSIT-3B</h3>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaae55eb-7c7d-4fd3-9b8b-76fa01f52348",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f324d61-14fa-42a3-8526-622890513979",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3971,7 +4474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
